--- a/packages/stops-overlay/package.json
+++ b/packages/stops-overlay/package.json
@@ -22,7 +22,7 @@
     "@opentripplanner/base-map": "workspace:*",
     "@opentripplanner/from-to-location-picker": "workspace:*",
     "@opentripplanner/map-popup": "workspace:*",
-    "flat": "^5.0.2"
+    "flat": "catalog:"
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
