--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@opentripplanner/core-utils": "workspace:*",
     "@styled-icons/fa-solid": "^10.34.0",
-    "flat": "^5.0.2",
+    "flat": "catalog:",
     "react-animate-height": "catalog:"
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
-    "@types/flat": "^5.0.2"
+    "@types/flat": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
