--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -19,13 +19,13 @@
     "@styled-icons/fa-regular": "^10.37.0",
     "@styled-icons/fa-solid": "^10.37.0",
     "date-fns": "^2.28.0",
-    "flat": "^5.0.2",
+    "flat": "catalog:",
     "react-animate-height": "catalog:",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-inlinesvg": "^2.3.0"
   },
   "devDependencies": {
-    "@types/flat": "^5.0.2",
+    "@types/flat": "catalog:",
     "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
