--- a/packages/endpoints-overlay/package.json
+++ b/packages/endpoints-overlay/package.json
@@ -23,7 +23,7 @@
     "@opentripplanner/location-icon": "workspace:*",
     "@opentripplanner/core-utils": "workspace:*",
     "flat": "catalog:",
-    "@styled-icons/fa-solid": "^10.34.0",
+    "@styled-icons/fa-solid": "catalog:",
     "@opentripplanner/building-blocks": "workspace:*"
   },
   "devDependencies": {
