--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -14,8 +14,8 @@
     "@opentripplanner/humanize-distance": "workspace:*",
     "@opentripplanner/icons": "workspace:*",
     "@opentripplanner/location-icon": "workspace:*",
-    "@styled-icons/fa-solid": "^10.34.0",
-    "@styled-icons/foundation": "^10.34.0",
+    "@styled-icons/fa-solid": "catalog:",
+    "@styled-icons/foundation": "catalog:",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
     "flat": "catalog:",
