--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -14,7 +14,7 @@
     "@opentripplanner/geocoder": "workspace:*",
     "@opentripplanner/humanize-distance": "workspace:*",
     "@opentripplanner/location-icon": "workspace:*",
-    "@styled-icons/fa-solid": "^10.34.0",
+    "@styled-icons/fa-solid": "catalog:",
     "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
