--- a/packages/location-icon/package.json
+++ b/packages/location-icon/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@styled-icons/fa-regular": "^10.34.0",
-    "@styled-icons/fa-solid": "^10.34.0"
+    "@styled-icons/fa-regular": "catalog:",
+    "@styled-icons/fa-solid": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
