--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -14,7 +14,7 @@
     "@opentripplanner/building-blocks": "workspace:*",
     "@opentripplanner/icons": "workspace:*",
     "@floating-ui/react": "^0.19.2",
-    "@styled-icons/bootstrap": "^10.34.0",
+    "@styled-icons/bootstrap": "catalog:",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/fa-regular": "^10.37.0",
     "@styled-icons/fa-solid": "^10.37.0",
