chore(deps): Use catalog version for date-fns packages

--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -16,8 +16,8 @@
     "@opentripplanner/location-icon": "workspace:*",
     "@styled-icons/fa-solid": "catalog:",
     "@styled-icons/foundation": "catalog:",
-    "date-fns": "^2.28.0",
-    "date-fns-tz": "^1.2.2",
+    "date-fns": "catalog:",
+    "date-fns-tz": "catalog:",
     "flat": "catalog:",
     "react-animate-height": "catalog:",
     "react-resize-detector": "^4.2.1",
