--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -18,7 +18,7 @@
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/fa-regular": "^10.37.0",
     "@styled-icons/fa-solid": "^10.37.0",
-    "date-fns": "^2.28.0",
+    "date-fns": "catalog:",
     "flat": "catalog:",
     "react-animate-height": "catalog:",
     "react-indiana-drag-scroll": "^2.0.1",
