--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 catalog:
+  "@mapbox/polyline": ^1.1.1
   "@styled-icons/bootstrap": ^10.34.0
   "@styled-icons/fa-regular": ^10.34.0
   "@styled-icons/fa-solid": ^10.34.0
