--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@opentripplanner/base-map": "workspace:*",
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "maplibre-gl": "^5.6.0"
   }
 }
