--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -21,6 +21,6 @@
   "devDependencies": {
     "@opentripplanner/base-map": "workspace:*",
     "@opentripplanner/types": "workspace:*",
-    "maplibre-gl": "^5.6.0"
+    "maplibre-gl": "catalog:"
   }
 }
