--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,7 @@ catalog:
   date-fns: ^2.28.0
   date-fns-tz: ^1.2.2
   flat: ^5.0.2
+  maplibre-gl: ^5.6.0
   react: ^18.2.0
   react-animate-height: ^3.0.4
   react-dom: ^18.2.0
