refactor(transitive-overlay): Reuse maplibre-gl PositionAnchor type.

--- a/packages/transitive-overlay/package.json
+++ b/packages/transitive-overlay/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "@opentripplanner/endpoints-overlay": "workspace:*",
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "maplibre-gl": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
