feat: rebuild fare table to support OTP Fares V2
BREAKING CHANGE: old fare table, and all configuration that goes with it, have been removed

--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -13,12 +13,10 @@
   "dependencies": {
     "@opentripplanner/core-utils": "workspace:*",
     "@styled-icons/fa-solid": "catalog:",
-    "flat": "catalog:",
     "react-animate-height": "catalog:"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "@types/flat": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
