--- a/package.json
+++ b/package.json
@@ -21,23 +21,17 @@
     "@babel/preset-env": "^7.10",
     "@babel/preset-react": "^7.10",
     "@babel/preset-typescript": "^7.13.0",
-    "@danielhep/storybook-react-intl": "3.0.1",
+    "storybook-react-intl": "4.0.7",
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-a11y": "^8.6.4",
-    "@storybook/addon-actions": "^8.6.4",
-    "@storybook/addon-controls": "^8.6.4",
-    "@storybook/addon-docs": "^8.6.4",
-    "@storybook/addon-essentials": "^8.6.4",
-    "@storybook/addon-links": "^8.6.4",
-    "@storybook/addon-storysource": "^8.6.4",
-    "@storybook/addon-viewport": "^8.6.4",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
-    "@storybook/react": "^8.6.4",
-    "@storybook/react-webpack5": "^8.6.4",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/addon-docs": "^9.0.15",
+    "@storybook/addon-links": "^9.0.15",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
+    "@storybook/react-webpack5": "^9.0.15",
     "@storybook/storybook-deployer": "^2.8.10",
-    "@storybook/test-runner": "^0.22.0",
+    "@storybook/test-runner": "^0.23.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.0",
     "@types/styled-components": "^5.1.9",
@@ -87,8 +81,8 @@
     "semantic-release-monorepo": "^8.0.2",
     "semantic-release-pnpm": "^1.0.2",
     "semver": "^7.3.2",
-    "storybook": "^8.6.4",
-    "storybook-mock-date-decorator": "^2.0.6",
+    "storybook": "^9.0.15",
+    "storybook-mock-date-decorator": "^3.0.0",
     "styled-components": "catalog:",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
@@ -284,6 +278,6 @@
     "workerDirectory": "public"
   },
   "dependencies": {
-    "@storybook/icons": "^1.2.9"
+    "@storybook/icons": "^1.4.0"
   }
 }
