remove babel deps

--- a/package.json
+++ b/package.json
@@ -9,29 +9,20 @@
   "packageManager": "pnpm@10.9.0",
   "devDependencies": {
     "@anolilab/semantic-release-pnpm": "^1.1.10",
-    "@babel/cli": "^7.10",
-    "@babel/core": "^7.10",
-    "@babel/plugin-proposal-class-properties": "^7.10",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-methods": "^7.23.3",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.10",
-    "@babel/preset-react": "^7.10",
-    "@babel/preset-typescript": "^7.13.0",
-    "storybook-react-intl": "4.0.7",
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
+    "@storybook/builder-vite": "^9.0.15",
     "@storybook/react-webpack5": "^9.0.15",
     "@storybook/storybook-deployer": "^2.8.10",
     "@storybook/test-runner": "^0.23.0",
+    "@swc/cli": "^0.7.7",
+    "@swc/core": "^1.12.9",
+    "@swc/jest": "^0.2.38",
+    "@swc/plugin-styled-components": "^8.0.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.0",
     "@types/styled-components": "^5.1.9",
@@ -39,11 +30,6 @@
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "axe-playwright": "^2.1.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-import-graphql": "^2.8.1",
-    "babel-plugin-styled-components": "^1.10.0",
     "concurrently": "^8.2.2",
     "core-js": "2",
     "eslint": "^7.32.0",
@@ -81,7 +67,9 @@
     "semantic-release-pnpm": "^1.0.2",
     "semver": "^7.3.2",
     "storybook": "^9.0.15",
+    "storybook-addon-swc": "^1.2.0",
     "storybook-mock-date-decorator": "^3.0.0",
+    "storybook-react-intl": "4.0.7",
     "styled-components": "catalog:",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
