--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "storybook-react-intl": "4.0.7",
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
+    "@modyfi/vite-plugin-yaml": "^1.1.1",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
-    "@storybook/react-webpack5": "^9.0.15",
+    "@storybook/builder-vite": "^9.0.15",
+    "@storybook/react-vite": "^9.0.15",
     "@storybook/storybook-deployer": "^2.8.10",
     "@storybook/test-runner": "^0.23.0",
     "@types/jest": "^26.0.23",
@@ -50,7 +51,6 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-import": "2.23.3",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
@@ -64,6 +64,7 @@
     "jest-haste-map": "^24.8.0",
     "jest-resolve": "^24.8.0",
     "jest-styled-components": "^7.0.5",
+    "jest-transform-graphql": "^2.1.0",
     "js-yaml": "^4.1.0",
     "json-loader": "^0.5.7",
     "lerna": "^8.1.9",
@@ -91,7 +92,7 @@
     "stylelint-prettier": "^1.1.1",
     "stylelint-processor-styled-components": "^1.8.0",
     "typescript": "^4.2.4",
-    "webpack": "^4.33.0",
+    "vite-plugin-graphql-loader": "^4.0.4",
     "yaml-jest": "^1.2.0",
     "yaml-loader": "^0.8.1",
     "yaml-sort": "^2.0.0"
@@ -119,7 +120,7 @@
     "semantic-release": "lerna exec --concurrency 1 -- semantic-release -e semantic-release-monorepo -e $(pwd)/release.config.mjs",
     "test": "pnpm lint:js && pnpm lint:styles && pnpm check:i18n-en-fr && pnpm typescript && pnpm unit && pnpm test-storybook && pnpm a11y-test",
     "typescript": "lerna run tsc",
-    "unit": "jest --testPathIgnorePatterns a11y .d.ts",
+    "unit": "jest --testPathIgnorePatterns esm lib a11y .d.ts",
     "update-internal-dependencies": "node scripts/update-internal-dependencies.js",
     "test-storybook": "test-storybook --url http://localhost:5555",
     "update-snapshots": "pnpm build-storybook; npx concurrently -k -s first -n \"SB,TEST\" \"npx http-server storybook-static --port 5555 --silent\" \"npx wait-on tcp:5555 && pnpm test-storybook --url http://localhost:5555 -u\"",
@@ -255,8 +256,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --ignore-pattern lib --ignore-pattern node_modules --fix",
-      "stylelint \"packages/**/!(*.d).{j,t}s{,x}\" --fix",
+      "eslint --ignore-pattern lib --ignore-pattern esm --ignore-pattern node_modules --fix",
+      "stylelint --ignore-pattern esm --ignore-pattern lib \"packages/**/!(*.d).{j,t}s{,x}\" --fix",
       "git add"
     ],
     "*.{json,md}": [
