run a11y and snapshot tests separately

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -29,9 +29,16 @@ jobs:
         run: pnpm run unit
       - name: Build Storybook
         run: pnpm run build-storybook --quiet
-      - name: Serve Storybook and run test runner
-        # env: 
-        #   ONLY_RUN: SNAPSHOTS
+      - name: Serve Storybook and run snapshot tests
+        env: 
+          ONLY_RUN: SNAPSHOTS
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 5555 --silent" \
+            "npx wait-on tcp:5555 && pnpm run test-storybook --ci"
+      - name: Serve Storybook and run a11y tests
+        env: 
+          ONLY_RUN: A11Y
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 5555 --silent" \
