--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -30,19 +30,22 @@ jobs:
       - name: Install Playwright
         run: pnpm exec playwright install --with-deps
       - name: Serve Storybook and run snapshot tests
-        env: 
-          ONLY_RUN: SNAPSHOTS
+        # We have to run the snapshot and a11y tests together
+        # Because Jest will fail if there are obsolete snapshots
+        # And you would get obsolete snapshots from running the a11y tests alone
+        # env: 
+        #   ONLY_RUN: SNAPSHOTS
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 5555 --silent" \
             "npx wait-on tcp:5555 && pnpm run test-storybook --ci"
-      - name: Serve Storybook and run a11y tests
-        env: 
-          ONLY_RUN: A11Y
-        run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-            "npx http-server storybook-static --port 5555 --silent" \
-            "npx wait-on tcp:5555 && pnpm run test-storybook --ci"
+      # - name: Serve Storybook and run a11y tests
+      #   env: 
+      #     ONLY_RUN: A11Y
+      #   run: |
+      #     npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+      #       "npx http-server storybook-static --port 5555 --silent" \
+      #       "npx wait-on tcp:5555 && pnpm run test-storybook --ci"
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
