Try preserve option for module setting

--- a/packages/vehicle-rental-overlay/tsconfig.json
+++ b/packages/vehicle-rental-overlay/tsconfig.json
@@ -4,7 +4,8 @@
     "composite": true,
     "outDir": "./lib",
     "rootDir": "./src",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "module": "preserve",
   },
   "include": ["src/**/*"],
   "references": [
