--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,5 +15,10 @@ catalog:
   react-map-gl: ^7.0.15
   styled-components: ^5.3.0
   styled-icons: ^10.34.0
+
 packages:
   - packages/*
+
+onlyBuiltDependencies:
+  - fsevents
+  - puppeteer
