--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -12,7 +12,9 @@
   "private": false,
   "dependencies": {
     "@opentripplanner/core-utils": "workspace:*",
+    "@styled-icons/boxicons-regular": "^10.47.0",
     "@styled-icons/fa-solid": "catalog:",
+    "flat": "catalog:",
     "react-animate-height": "catalog:"
   },
   "devDependencies": {
