--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -10,14 +10,14 @@
   "types": "lib/index.d.ts",
   "private": false,
   "dependencies": {
-    "@opentripplanner/core-utils": "workspace:*",
     "@opentripplanner/building-blocks": "workspace:*",
+    "@opentripplanner/core-utils": "workspace:*",
     "@opentripplanner/icons": "workspace:*",
-    "@floating-ui/react": "^0.19.2",
     "@styled-icons/bootstrap": "catalog:",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/fa-regular": "^10.37.0",
     "@styled-icons/fa-solid": "^10.37.0",
+    "csstype": "^3.1.3",
     "date-fns": "catalog:",
     "flat": "catalog:",
     "react-animate-height": "catalog:",
@@ -25,8 +25,8 @@
     "react-inlinesvg": "^2.3.0"
   },
   "devDependencies": {
-    "@types/flat": "catalog:",
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "@types/flat": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
