refactor: add clonedeep as a devDependency in trip-form

--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -26,7 +26,8 @@
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
-    "@types/flat": "catalog:"
+    "@types/flat": "catalog:",
+    "lodash.clonedeep": "^4.5.0"
   },
   "peerDependencies": {
     "react": "catalog:",
