chore(humanize-distance): Add types package as dev dependency.

--- a/packages/humanize-distance/package.json
+++ b/packages/humanize-distance/package.json
@@ -13,6 +13,9 @@
   "scripts": {
     "tsc": "tsc"
   },
+  "devDependencies": {
+    "@opentripplanner/types": "workspace:*"
+  },
   "peerDependencies": {
     "react": "catalog:",
     "react-intl": "catalog:"
