--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,10 @@
 catalog:
-  "@mapbox/polyline": ^1.1.1
-  "@styled-icons/bootstrap": ^10.34.0
-  "@styled-icons/fa-regular": ^10.34.0
-  "@styled-icons/fa-solid": ^10.34.0
-  "@styled-icons/foundation": ^10.34.0
-  "@types/flat": ^5.0.2
+  '@mapbox/polyline': ^1.1.1
+  '@styled-icons/bootstrap': ^10.34.0
+  '@styled-icons/fa-regular': ^10.34.0
+  '@styled-icons/fa-solid': ^10.34.0
+  '@styled-icons/foundation': ^10.34.0
+  '@types/flat': ^5.0.2
   date-fns: ^2.28.0
   date-fns-tz: ^1.2.2
   flat: ^5.0.2
@@ -21,5 +21,12 @@ packages:
   - packages/*
 
 onlyBuiltDependencies:
+  - '@swc/core'
+  - core-js
+  - esbuild
   - fsevents
+  - husky
+  - msw
+  - nx
   - puppeteer
+  - unrs-resolver
