Improve tsconfig settings for monorepo

--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -10,7 +10,8 @@
   "private": false,
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
-    "@opentripplanner/core-utils": "workspace:*"
+    "@opentripplanner/core-utils": "workspace:*",
+    "storybook": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
