--- a/packages/core-utils/package.json
+++ b/packages/core-utils/package.json
@@ -29,6 +29,7 @@
     "tsc": "tsc"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "storybook": "catalog:"
   }
 }
