--- a/packages/humanize-distance/package.json
+++ b/packages/humanize-distance/package.json
@@ -14,7 +14,8 @@
     "tsc": "tsc"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "storybook": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
