--- a/packages/location-field/tsconfig.json
+++ b/packages/location-field/tsconfig.json
@@ -5,5 +5,6 @@
     "outDir": "./lib",
     "rootDir": "./src"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.story.tsx", "**/*.story.ts", "src/stories/**/*"]
 }
