--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -23,6 +23,9 @@
     "@opentripplanner/from-to-location-picker": "workspace:*",
     "@opentripplanner/types": "workspace:*"
   },
+  "devDependencies": {
+    "storybook": "catalog:"
+  },
   "peerDependencies": {
     "react": "catalog:",
     "react-dom": "catalog:",
