--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -22,6 +22,9 @@
     "tsc": "tsc",
     "validate-i18n": "node lib/run-validate-i18n.js ../**/src ../**/i18n"
   },
+  "devDependencies": {
+    "storybook": "catalog:"
+  },
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
