--- a/packages/trip-viewer-overlay/package.json
+++ b/packages/trip-viewer-overlay/package.json
@@ -23,6 +23,9 @@
     "@opentripplanner/base-map": "workspace:*",
     "@opentripplanner/core-utils": "workspace:*"
   },
+  "devDependencies": {
+    "storybook": "catalog:"
+  },
   "peerDependencies": {
     "react": "catalog:",
     "react-map-gl": "catalog:"
