--- a/packages/geocoder/package.json
+++ b/packages/geocoder/package.json
@@ -19,5 +19,8 @@
   "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
   "scripts": {
     "tsc": "tsc"
+  },
+  "devDependencies": {
+    "storybook": "catalog:"
   }
 }
