--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
+  "devDependencies": {
+    "storybook": "catalog:"
+  }
 }
