--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
-    "@types/flat": "catalog:"
+    "@types/flat": "catalog:",
+    "storybook": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
