--- a/packages/map-popup/package.json
+++ b/packages/map-popup/package.json
@@ -18,7 +18,8 @@
     "flat": "catalog:"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "storybook": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
