--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,12 @@
 catalog:
-  '@mapbox/polyline': ^1.1.1
-  '@styled-icons/bootstrap': ^10.34.0
-  '@styled-icons/fa-regular': ^10.34.0
-  '@styled-icons/fa-solid': ^10.34.0
-  '@styled-icons/foundation': ^10.34.0
-  '@types/flat': ^5.0.2
+  "@mapbox/polyline": ^1.1.1
+  "@storybook/addon-actions": ^8.0.0
+  "@storybook/test": ^8.0.0
+  "@styled-icons/bootstrap": ^10.34.0
+  "@styled-icons/fa-regular": ^10.34.0
+  "@styled-icons/fa-solid": ^10.34.0
+  "@styled-icons/foundation": ^10.34.0
+  "@types/flat": ^5.0.2
   date-fns: ^2.28.0
   date-fns-tz: ^1.2.2
   flat: ^5.0.2
@@ -14,14 +16,11 @@ catalog:
   react-dom: ^18.2.0
   react-intl: ^6.8.4
   react-map-gl: ^8.0.4
+  storybook: ^10.0.5
   styled-components: ^5.3.0
   styled-icons: ^10.34.0
-
-packages:
-  - packages/*
-
 onlyBuiltDependencies:
-  - '@swc/core'
+  - "@swc/core"
   - core-js
   - esbuild
   - fsevents
@@ -30,3 +29,5 @@ onlyBuiltDependencies:
   - nx
   - puppeteer
   - unrs-resolver
+packages:
+  - packages/*
