build: upgrade to typescript 5.9

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@babel/preset-env": "^7.10",
     "@babel/preset-react": "^7.10",
     "@babel/preset-typescript": "^7.13.0",
-    "storybook-react-intl": "4.0.7",
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
     "@modyfi/vite-plugin-yaml": "^1.1.1",
@@ -39,6 +38,7 @@
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "@vitejs/plugin-react": "^4.7.0",
     "axe-playwright": "^2.1.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.8.0",
@@ -61,8 +61,8 @@
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.4",
+    "jest-file-loader": "^1.0.3",
     "jest-haste-map": "^30.0.2",
-    "@vitejs/plugin-react": "^4.7.0",
     "jest-resolve": "^30.0.2",
     "js-yaml": "^4.1.0",
     "json-loader": "^0.5.7",
@@ -81,6 +81,7 @@
     "semantic-release-pnpm": "^1.0.2",
     "semver": "^7.3.2",
     "storybook-mock-date-decorator": "^3.0.0",
+    "storybook-react-intl": "4.0.7",
     "styled-components": "catalog:",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
@@ -88,12 +89,11 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-prettier": "^1.1.1",
     "stylelint-processor-styled-components": "^1.8.0",
-    "typescript": "^4.2.4",
+    "typescript": "^5.9.3",
     "vite-plugin-graphql-loader": "^4.0.4",
     "yaml-jest": "^1.2.0",
     "yaml-loader": "^0.8.1",
-    "yaml-sort": "^2.0.0",
-    "jest-file-loader": "^1.0.3"
+    "yaml-sort": "^2.0.0"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
