--- a/packages/trip-form/tsconfig.json
+++ b/packages/trip-form/tsconfig.json
@@ -8,5 +8,6 @@
     "skipLibCheck": true
   },
   "jsx": "react",
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.story.tsx", "**/*.story.ts", "src/stories/**/*"]
 }
